src/objects/EngagementFrequencySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Rules for what levels should be awarded for repeated similar actions</description>
    <fields>
        <fullName>Field_Value_1__c</fullName>
        <inlineHelpText>if this and Fieldname 1 are populated, requires that all actions for this rule have the specified value in specified field.  For checkboxes, enter &quot;True&quot; for checked.</inlineHelpText>
        <label>Field Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldname_1__c</fullName>
        <inlineHelpText>enter the name (developer name) of a field in Campaign to check</inlineHelpText>
        <label>Campaign Fieldname 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Required__c</fullName>
        <inlineHelpText>if populated, requires that all qualifying actions be of this level (in addition to any field requirements, if any)</inlineHelpText>
        <label>Level Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_To_Assign__c</fullName>
        <label>Level To Assign</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Actions_Required__c</fullName>
        <inlineHelpText>only assigns the level if this many actions of the required specification have been taken during the usual timeframe</inlineHelpText>
        <label>Number of Actions Required</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Frequency Settings</label>
</CustomObject>